# 2019-Q3-EDS_Funcionais_Dia02

./: README.md  dia02.cabal
src/: Heaps.hs  RedBlackTree.hs  SimpleTree.hs  Trees.hs  TypeSafeRBTree.hs
test/: Spec.hs
