-- Emilio Francesquini <e.francesquini@ufabc.edu.br>
-- CC-BY-SA
-- 11/2019

name:                dia02
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dia02#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:
                  Heaps, Trees
  other-modules:
                RedBlackTree, SimpleTree, TypeSafeRBTree
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010
  ghc-options: -O3 -Wall

test-suite heap-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
                Heaps, Trees, RedBlackTree, SimpleTree, TypeSafeRBTree
  hs-source-dirs:
      test, src
  ghc-options: -O3 -Wall
  build-depends:
                base >=4.7 && <5
              , tasty
              , tasty-quickcheck
  default-language: Haskell2010